<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="85dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true" />
    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
        app:layout_constraintEnd_toEndOf="@+id/imageProfile"
        app:layout_constraintStart_toStartOf="@+id/imageProfile"
        app:layout_constraintTop_toTopOf="@+id/imageProfile"/>

    <TextView
        android:id="@+id/viewNameUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/jorge_molina"
        android:textColor="@color/colorPrimaryText"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewSupporter"
        app:layout_constraintStart_toEndOf="@+id/imageProfile" />

    <TextView
        android:id="@+id/viewRol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/rol"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter" />
    <TextView
        android:id="@+id/viewActivy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/verified"
        android:textColor="@color/colorGreen"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toBottomOf="@id/viewRol"/>


</androidx.constraintlayout.widget.ConstraintLayout>